--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,27 +8,28 @@
   <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
+  <a href="#favorite" class="skip-link">Menuju ke konten</a>
   <nav class="nav-bar">
     <div class="nav-logo">
-      <h1>MakanYuxx</h1>
+      <h1 tabindex="0">MakanYuxx</h1>
     </div>
     
     <div class="menu-bar">
       <ul class="list-menu">
         <li class="nav-item"><a href="#">Home</a></li>
         <li class="nav-item"><a href="#favorite">Favorite</a></li>
-        <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/">About Us</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/ ">About Us</a></li>
       </ul>
     </div>
   </nav>
 
   <header class="header">
-    <a id="menu" class="header__menu">☰</a>
+    <a id="menu" class="header__menu" aria-label="drawer menu">☰</a>
   </header>
 
   <div class="jumbotron">
     <div class="overlay">
-      <div class="hero-inner"> 
+      <div class="hero-inner" tabindex="0"> 
         <h2 class="hero-title">Are You Hungry ???</h2>
         <p class="hero-desc text-capitalize">Hunger Can Make Your Day and Time Feel Really Bad, so make sure your stomach is always full and it will make your day feel good. Let's Explore Various Favorite Restaurants Here</p>
       </div>
@@ -36,10 +37,12 @@
   </div>
 
   <main id="favorite">
-    <h2  class="title">Explore Restaurant</h2>
-    <p class="text-muted text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, est!</p>
-    <section class="list-restaurant">
-      
+    <section class="content">
+      <h2  class="title text-center" tabindex="0">Explore Restaurant</h2>
+      <p class="text-muted text-center" tabindex="0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, est!</p>
+      <section class="list-restaurant">
+        <div class="card-item"></div>
+      </section>
     </section>
   </main>
 
@@ -47,19 +50,19 @@
     <div class="container">
       <div class="row">
         <div class="footer-col">
-          <h4>follow us</h4>
+          <h4 tabindex="0">follow us</h4>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="create-by text-center">
-      <h6>Made with <span class="love">&#10084;</span> by Fadilla Rahim</h6>
-      <h6>MSIB Batch 3 at Dicoding Indonesia</h3>
+      <h6 tabindex="0">Made with <span class="love" aria-label="love">&#10084;</span> by Fadilla Rahim</h6>
+      <h6 tabindex="0">MSIB Batch 3 at Dicoding Indonesia</h6>
   </div>
   </footer>
 </body>
