--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -7,12 +7,12 @@
     .menu-bar {
       z-index: 10;
       background-color: #fff;
-      width: 100%;
+      width: 50%;
       position: absolute;
   
       /* This trasform moves the drawer off canvas. */
-      -webkit-transform: translate(0, -300px);
-      transform: translate(0, -300px);
+      -webkit-transform: translate(-300px,0);
+      transform: translate(-300px,0);
   
       /* Optionally, we animate the drawer. */
       transition: transform 0.3s ease;
@@ -30,8 +30,8 @@
 
   
     .open {
-      -webkit-transform: translate(0, 205px);
-      transform: translate(0, 205px);
+      -webkit-transform: translate(0, 0);
+      transform: translate(0, 0);
     }
   
     .nav-item {
@@ -43,7 +43,8 @@
 
 
     .nav-bar .nav-logo{
-      margin-top: 10px;
+      margin: 10px auto;
+      text-align: center;
       cursor: pointer;
       transition: all 0.5s ease 0s;
       font-size: 24px;
@@ -73,6 +74,26 @@
       padding: 10px;
       margin-right: 8px;
     }
+
+    /*Styling For Navbar*/
+    .nav-bar{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      transition: min-height 0.3s;
+    }
+    
+    .nav-bar .menu-bar{
+      padding: 20px;
+      margin: 10px;
+    }
+    
+    .nav-bar .menu-bar .list-menu{
+      display: inline;
+      padding: 20px;
+    }
+    
   }
 
 @media screen and (min-width: 650px) {
