--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
   <a href="#favorite" class="skip-link">Menuju ke konten</a>
-  <nav class="nav-bar">
-    <div class="nav-logo">
-      <h1 tabindex="0">MakanYuxx</h1>
-    </div>
-    
-    <div class="menu-bar">
-      <ul class="list-menu">
-        <li class="nav-item"><a href="#">Home</a></li>
-        <li class="nav-item"><a href="#favorite">Favorite</a></li>
-        <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/ ">About Us</a></li>
-      </ul>
-    </div>
-  </nav>
-
   <header class="header">
-    <a id="menu" class="header__menu" aria-label="drawer menu">☰</a>
+    <nav class="nav-bar">
+      <div class="nav-logo">
+        <h1 tabindex="0">MakanYuxx</h1>
+      </div>
+      <button id="menu" class="header__menu" aria-label="drawer menu" href="">☰</button>
+      <div class="menu-bar">
+        <ul class="list-menu">
+          <li class="nav-item"><a href="index.html">Home</a></li>
+          <li class="nav-item"><a href="#favorite">Favorite</a></li>
+          <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/ ">About Us</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
-  <div class="jumbotron">
+
+
+  <div class="jumbotron" id="jumbotron">
     <div class="overlay">
       <div class="hero-inner" tabindex="0"> 
         <h2 class="hero-title">Are You Hungry ???</h2>
