--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -139,7 +139,7 @@ main{
 card item restorant
 */
 .post-item {
-  float: left;
+  display: grid;
   margin: 16px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
