--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -117,72 +117,86 @@ a{
 /*Styling For List Reastaurant*/
 main{
   width: 100%;
-  margin: 0px auto;
-
+  margin: 20px auto;
 }
 
 .content {
-  padding: 32px;
-
-  padding-left: 0;
+  width: 100%;
+  padding: 20px;
 }
 
-.content .list-restaurant .card-item{
+#favorite .content .title{
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+#favorite .content .desc{
+  text-align: center;
+  font-style: italic;
+  color: #999;
+}
+
+.content .list-restaurant .card-grid{
   width: 100%;
   margin: 0 auto;
   text-align: center;
-
   padding: 0;
+}
+
+.content .list-restaurant{
+  margin-top: 40px;
 }
 
 /*
 card item restorant
 */
-.post-item {
-  display: grid;
-  margin: 16px;
+.card-item {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   border-radius: 5px;
   overflow: hidden;
 }
 
-.post-item__content {
+.card-item__content {
   padding: 16px 32px 32px 32px;
 }
 
-.post-item__thumbnail {
+.card-item__thumbnail {
   width: 100%;
+  height: 270px;
+  object-fit: cover;
+  object-position: center;
 }
 
-.post-item_city {
+.card-item_city {
   font-size: 14px;
   text-transform: capitalize;
   color: #999;
 }
 
-.post-item_city .txt-rat{
+.card-item_city .txt-rat{
   color: red;
 }
 
-.post-item__title {
+.card-item__title {
   font-weight: 500;
   margin-top: 16px;
   transition: 0.3s opacity;
 }
 
-.post-item__title:hover {
+.card-item__title:hover {
   opacity: 0.5;
 }
 
-.post-item__title a {
+.card-item__title a {
   text-decoration: none;
   color: inherit;
   min-width: 44px;
   min-height: 44px;
 }
 
-.post-item__description {
+.card-item__description {
   margin-top: 16px;
   font-size: 16px;
   line-height: 1.5em;
@@ -193,7 +207,7 @@ card item restorant
   overflow: hidden;
 }
 
-.post-item__btn_read{
+.card-item__btn_read{
   padding: 7px;
   border-radius: 8px;
   background-color: #1C6758;
@@ -201,9 +215,10 @@ card item restorant
   border: 2px solid #1C6758;
   min-width: 44px;
   min-height: 44px;
+  margin-top: 20px;
 }
 
-.post-item__btn_read:hover{
+.card-item__btn_read:hover{
   background-color: transparent;
   color: #1C6758;
 }
@@ -221,15 +236,20 @@ card item restorant
  .container{
 	max-width: 1000px;
 	overflow: hidden;
-  
+  margin: 0 auto;
 }
-.row{
+.follow-us{
 	display: flex;
 	flex-wrap: wrap;
   width: 100%;
   margin: 0 auto;
   justify-content: center;
+  text-align: center;
   
+}
+.follow-us .social-links{
+  width: 100%;
+  margin: 10px auto;
 }
 footer.ul{
 	list-style: none;
@@ -286,11 +306,13 @@ footer.ul{
   position: relative;
   bottom: 0;
   color: #ffffff;
+  text-align: center;
 }
 
 .footer .create-by h6{
-  width: 80%;
   margin: 10px auto;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .footer .create-by .love{
