--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
         <ul class="list-menu">
           <li class="nav-item"><a href="index.html">Home</a></li>
           <li class="nav-item"><a href="#favorite">Favorite</a></li>
-          <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/ ">About Us</a></li>
+          <li class="nav-item"><a href="https://www.linkedin.com/in/fadilla-rahim-96034621b/ " target="_blank"  rel="noreferrer">About Us</a></li>
         </ul>
       </div>
     </nav>
@@ -38,17 +38,17 @@
 
   <main id="favorite">
     <section class="content">
-      <h2  class="title text-center" tabindex="0">Explore Restaurant</h2>
-      <p class="text-muted text-center" tabindex="0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, est!</p>
+      <h2  class="title" tabindex="0">Explore Restaurant</h2>
+      <p class="desc" tabindex="0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, est!</p>
       <section class="list-restaurant">
-        <div class="card-item"></div>
+        <div class="card-grid"></div>
       </section>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <div class="row">
+      <div class="row follow-us">
         <div class="footer-col">
           <h4 tabindex="0">follow us</h4>
           <div class="social-links">
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="create-by text-center">
+    <div class="create-by">
       <h6 tabindex="0">Made with <span class="love" aria-label="love">&#10084;</span> by Fadilla Rahim</h6>
       <h6 tabindex="0">MSIB Batch 3 at Dicoding Indonesia</h6>
   </div>
